# NeuroNav-ROS2

./: .gitattributes  .gitignore  README.md
assets/: day28_map_update_output.txt
docs/: day54_repo_master_summary.md
journal/: day01.md  day02.md  day03.md  day04.md  day05.md  day06.md  day07.md  day08.md  day09.md  day10.md  day11.md  day12.md  day13.md  day14.md  day15.md  day16.md  day17.md  day18.md  day19.md  day20.md  day21.md  day22.md  day23.md  day24.md  day25.md  day26.md  day27.md  day28.md  day29.md  day30.md  day31.md  day32.md  day33.md  day34.md  day35.md  day36.md  day37.md  day38.md  day39.md  day40.md  (+15 more)
ws/: frames_2026-03-12_05.40.39.gv  trajectory_plot.py
ws/rosbag2_2026_03_26-10_11_18/: metadata.yaml
ws/src/learning_tf2_py/: package.xml  setup.py
ws/src/learning_tf2_py/learning_tf2_py/: static_turtle_tf2_broadcaster.py
ws/src/nn_bringup/: package.xml  setup.cfg  setup.py
ws/src/nn_bringup/launch/: day32_pytorch_wrapper.launch.py  day33_object_detection.launch.py  full_system.launch.py
ws/src/nn_estimation/: package.xml  setup.cfg  setup.py
ws/src/nn_estimation/nn_estimation/: drift_analysis_node.py  imu_vision_fusion_node.py  multi_sensor_fusion_node.py  pose_graph_node.py  (+2 more)
ws/src/nn_mapping/: package.xml  setup.cfg  setup.py
ws/src/nn_perception/: package.xml  setup.cfg  setup.py
ws/src/nn_perception/nn_pytorch_wrapper/: package.xml  setup.cfg  setup.py
ws/src/nn_planning/: package.xml  setup.cfg  setup.py
ws/src/nn_sensors/: ost.yaml  package.xml  setup.cfg  setup.py
ws/src/nn_time_sync/: package.xml  setup.cfg  setup.py
(+37 files in other folders)
